fixed layout issue

--- a/app/client/styles/responsive.import.less
+++ b/app/client/styles/responsive.import.less
@@ -14,7 +14,7 @@
 // MOBILE LANDSCAPE
 @media screen and (max-width: 568px) {
 	body {
-		// font-size: 15px;
+		
 	}
 
 	// containers
@@ -75,13 +75,14 @@
 }
 
 // MOBILE PORTRAIT
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 375px) {
 	body {
 		font-size: 12px;
 	}
 
 	// containers
 	header.main {
+
 		ul {
 			bottom: @defaultPadding * 0.5;
 
